--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "symfony/maker-bundle": "^1.19",
         "symfony/orm-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
+        "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
